--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+server.servlet.context-path=/splitreader
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/geek-market?serverTimezone=UTC&useSSL=false
+
+spring.datasource.initialize=true
