IsAliveController was added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8080
 server.servlet.context-path=/splitreader
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/geek-market?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/splitreader?serverTimezone=UTC&useSSL=false
 
 spring.datasource.initialize=true
