--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8080
-server.servlet.context-path=/splitreader
+server.port=80
+#server.servlet.context-path=/splitreader
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialize=true
