H2 database for tests was set up

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
@@ -99,5 +105,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
